--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.3.5",
+    "browser-image-compression": "^2.0.2",
     "framer-motion": "^10.11.2",
     "npm": "^9.6.3",
     "react": "^18.2.0",
