--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.3.5",
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^10.11.2",
+    "lodash": "^4.17.21",
     "npm": "^9.6.3",
     "rc-slider": "^10.3.1",
     "react": "^18.2.0",
