--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-alice-carousel": "^2.7.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-intersection-observer": "^9.8.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.0"
   },
