--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "browser-image-compression": "^2.0.2",
     "framer-motion": "^11.5.6",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "rc-slider": "^11.1.6",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
