--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.3.5",
     "browser-image-compression": "^2.0.2",
+    "formik": "^2.4.6",
     "framer-motion": "^11.5.6",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
@@ -24,7 +25,8 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
-    "web-vitals": "^4.2.3"
+    "web-vitals": "^4.2.3",
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "set PORT=4001 && react-scripts start",
