--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-intersection-observer": "^9.8.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "web-vitals": "^4.2.3",
