--- a/package.json
+++ b/package.json
@@ -1,55 +1,45 @@
 {
   "name": "shopnow",
-  "version": "2.1.0",
   "private": true,
+  "version": "3.1.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.7",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "axios": "^1.3.5",
-    "browser-image-compression": "^2.0.2",
+    "@reduxjs/toolkit": "^2.5.1",
+    "axios": "^1.7.9",
     "formik": "^2.4.6",
-    "framer-motion": "^11.5.6",
+    "framer-motion": "^12.4.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
-    "rc-slider": "^11.1.6",
-    "react": "^18.2.0",
-    "react-alice-carousel": "^2.7.1",
+    "rc-slider": "^11.1.8",
+    "react": "^19.0.0",
+    "react-alice-carousel": "^2.9.1",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.8.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "^5.0.1",
-    "react-spinners": "^0.14.1",
-    "react-toastify": "^10.0.5",
-    "web-vitals": "^4.2.3",
+    "react-dom": "^19.0.0",
+    "react-error-boundary": "^5.0.0",
+    "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.5",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
     "yup": "^1.6.1"
   },
-  "scripts": {
-    "start": "set PORT=4001 && react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@types/react": "^19.0.8",
+    "@types/react-dom": "^19.0.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.19.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "vite": "^6.1.0"
   }
 }
