--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.4.4",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
+    "prop-types": "^15.8.1",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-alice-carousel": "^2.9.1",
