--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "formik": "^2.4.6",
-    "framer-motion": "^12.4.4",
     "lodash": "^4.17.21",
-    "moment": "^2.30.1",
+    "motion": "^12.5.0",
     "prop-types": "^15.8.1",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
@@ -26,7 +26,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.5",
+    "react-router": "^7.3.0",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.3",
     "yup": "^1.6.1"
@@ -41,6 +41,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "rollup-plugin-visualizer": "^5.14.0",
     "vite": "^6.1.0"
   }
 }
