--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
-    "@sentry/react": "^9.22.0",
+    "@sentry/react": "^10.1.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
+    "@sentry/vite-plugin": "^4.0.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
