--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "test": "vitest",
     "audit-fix": "yarn audit && npm i --package-lock-only && npm audit fix && rm package-lock.json && rm yarn.lock && rm -rf node_modules && yarn"
   },
   "dependencies": {
@@ -36,19 +37,24 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@sentry/vite-plugin": "^4.0.2",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
+    "jsdom": "^27.0.1",
     "netlify-cli": "^21.2.1",
     "rollup-plugin-visualizer": "^5.14.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.1",
     "vite": "^6.1.0",
+    "vitest": "^4.0.3",
     "yarn-audit-fix": "^10.1.1"
   }
 }
