--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "types": ["vitest/globals"]
   },
-  "include": ["src"]
+  "include": ["src", "src/__tests__/setup.ts"]
 }
